[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap ={ version = "4.4.6", features = ["cargo"] }
rusqlite_migration = "1.0.2"
lazy_static = "1.4.0"

